
2018-01-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: postponed check for dangling LINKAGE items
	  from entry point generation to program validation, allowing to
	  only warn items that are actually in use, checked in new
	  function (has_sub_reference)
	* cobc.c (process_filename): set internal filename before checking
	  for valid name to get better error messages

2018-01-25  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (default_reserved_words_list): no longer assumed to be
	  sorted - this caused hard to understand errors when it
	  wasn't. (initialize_reserved_words_if_needed) now sorts it.

2018-01-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: added ACUCOBOL synonyms FLOAT -> FLOAT-SHORT,
	  DOUBLE -> FLOAT-LONG

2018-01-23  Ron Norman <rjn@inglenet.com>

	* tree.c: fixed coding error to use CB_FIELD_PTR
	* codegen.c, typeck.c: changed to use CB_FIELD_PTR as needed

2018-01-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: use position of last section when defining an implicit
	  paragraph
	* typeck.c (cb_build_identifier): adjusted debug checks for
	  EC-PROGRAM-ARG-OMITTED and EC-DATA-PTR-NULL
	* typeck.c: minor code refactoring

2018-01-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codgen.c (output_internal_function): don't clear sticky-linkage pointers
	  when program has CHAINING
	* parser.y: added SAME phrase for screen i/o as PENDING
	* field.c (compute_size): fixed check for report line

2018-01-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_identifier): also check for ref-mod length
	  overflow when offset is is a variable
	* typeck.c (cb_build_identifier): only build field name if actual
	  needed, moved code building to new static cb_build_name_reference
	* tree.c (compare_field_literal): added check for comparisions against
	  a reference modified field when the offset or length is known
