@@ -1,4 +1,13 @@
 
+2018-02-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* cobc.c, tree.h [COB_TREE_DEBUG]: make sure that we don't enter
+	  a loop of cb_tree cast errors, possible as the called (cb_name)
+	  may call cobc_tree_cast_error again,
+	  removed compiler specific handling
+	* cobc.c (cobc_abort_terminate): add parameter indicating that
+	  the user should report the error
+
 2018-01-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* parser.y, typeck.c: postponed check for dangling LINKAGE items
